refactor: introduce thread-local ScratchBuffer and FfmHelper for efficient native memory management and optimized XMP metadata serialization